Added some screenshots and link to extra help

--- a/readme.html
+++ b/readme.html
@@ -1,3 +1,4 @@
+<html><pre>
 NEURON mod files from the paper:
 
 Mercer JN, Chan CS, Tkatch T, Held J, Surmeier DJ. Nav1.6 sodium
@@ -36,13 +37,20 @@ modNav1.6 channels (bottom).
 Sample model usage: (Note, you will have re-launch the model between
 running Figure 9 & 10, and vice versa.)
 
+Run examples:
+Compile the mod files before starting with mosinit.hoc.  For more info
+on starting the model please consult this quide:
+<a href="https://senselab.med.yale.edu/ModelDB/NEURON_DwnldGuide.cshtml">https://senselab.med.yale.edu/ModelDB/NEURON_DwnldGuide.cshtml</a>
 
 Figure 9 - The run includes a period of autonomous firing at about 12
 Hz followed by a period of driven activity at about 50 Hz.
+<img src="./screenshot1.png" alt="screenshot 1">
 
 Figure 10 - The run includes a current injection ramp of 1 nA over the
 last 1 second. The data in the figure are based on the steady state
 condition before the ramp.
+<img src="./screenshot3.png" alt="screenshot 3">
+<img src="./screenshot2.png" alt="screenshot 2">
 
 To delete the Nav1.6 channels, use the "Remove Na1.6" button.  To
 replace Nav1.6 channels with Nav1.1 channels, use the "Replace Na1.6"
@@ -50,3 +58,4 @@ button.
 
 Questions on how to use this model can be directed to Josh Held,
 j-held@northwestern.edu
+</pre></html>
